manifests/apps/00-core/02-dashboard/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: dashboard
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    name: dashboard
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
